--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginxinc/nginx-unprivileged:1-alpine
-LABEL maintainer="shai1801"
+LABEL maintainer="londonappdeveloper.com"
 
 COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
 COPY ./uwsgi_params /etc/nginx/uwsgi_params
@@ -7,7 +7,7 @@ COPY ./run.sh /run.sh
 
 ENV LISTEN_PORT=8000
 ENV APP_HOST=app
-ENV port=9000
+ENV APP_PORT=9000
 
 USER root
 
@@ -21,4 +21,4 @@ VOLUME /vol/static
 
 USER nginx
 
-CMD ["/run.sh"]
+CMD ["sh", "/run.sh"]
